# Elevator_control_hackathon

./: .projectlinkstore  .silabsExtContext  ARCHITECTURE.md  Debug.code-workspace  Elevator_capacity_controller.pintool  Elevator_capacity_controller.slcp  Elevator_capacity_controller.slps  app.c  elev_app.c  elev_app.h  elev_ctrl.c  elev_ctrl.h  elev_gpio.c  elev_gpio.h  elev_parser.c  elev_parser.h  elev_rx.c  elev_rx.h  elev_tx.c  elev_tx.h  elev_types.h  readme.md  vscode.conf
.cursor/rules/: silicon-labs-ble-gatt-generation.mdc
.cursor/skills/PR-review/: SKILL.md
.cursor/skills/silicon-labs-add-ble-service/: SKILL.md
.cursor/skills/silicon-labs-add-ble-service/resources/: README.md  export_from_studio_vendor.cjs  package.json  studio-sig-catalog.json
.cursor/skills/sniper/: SKILL.md
autogen/: linkerfile.ld  sl_component_catalog.h  sl_event_handler.c  sl_event_handler.h
autogen/.slc_state/: .crc_config.crc
autogen/sbom/: cyclonedx_bom.json  cyclonedx_bom.xml  spdx_bom.spdx  spdx_bom.spdx.json
cmake_gcc/: CMakeLists.txt  CMakePresets.json  Elevator_capacity_controller.cmake
config/: FreeRTOSConfig.h  pin_config.h  sl_board_control_config.h  sl_clock_manager_oscillator_config.h  sl_clock_manager_tree_config.h  sl_debug_swo_config.h  sl_device_init_dcdc_config.h  sl_device_init_emu_config.h  sl_main_start_task_config.h  sl_memory_manager_region_config.h  sl_mx25_flash_shutdown_eusart_config.h  sl_simple_led_led0_config.h
docs/: ARCHITECTURE.md
elevator/: elev_app.c  elev_app.h  elev_ctrl.c  elev_ctrl.h  elev_gpio.c  elev_gpio.h  elev_parse_util.c  elev_parse_util.h  elev_parser.c  elev_parser.h  elev_rx.c  elev_rx.h  elev_tx.c  elev_tx.h  elev_types.h
simplicity_sdk_2026.6.0/cmsis/Core/Include/: cmsis_compiler.h  cmsis_gcc.h  core_cm33.h  sli_cmsis_deprecated_aliases.h
simplicity_sdk_2026.6.0/cmsis/RTOS2/Include/: cmsis_os2.h
simplicity_sdk_2026.6.0/freertos/cmsis/Source/: cmsis_os2.c
simplicity_sdk_2026.6.0/freertos/kernel/: croutine.c  event_groups.c  list.c  queue.c  stream_buffer.c  tasks.c  timers.c
simplicity_sdk_2026.6.0/freertos/kernel/include/: FreeRTOS.h  StackMacros.h  atomic.h  croutine.h  deprecated_definitions.h  event_groups.h  list.h  message_buffer.h  mpu_prototypes.h  mpu_wrappers.h  portable.h  projdefs.h  queue.h  semphr.h  stack_macros.h  stream_buffer.h  task.h  timers.h
tests/: test_parser.c
(+350 files in other folders)
